2012-02-22  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_expand_install_dirs.m4:
	  Created _X_AC_EXPAND_INSTALL_DIRS_EVAL.

	* : Updated copyright date range.

	* src/munged/random.c (random_init): Stir the entropy pool with the
	  current time.

2012-02-21  Chris Dunlap  <cdunlap@llnl.gov>

	* configure, config/x_ac_arch.m4: Applied patches from asau@netbsd.org
	  to fix calls to test for string equality on NetBSD.  (issue 12)

2011-02-27  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_select_auth_method.m4: Updated AUTH_METHOD_GETPEEREID
	  comment for OpenBSD.

2011-02-25  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.5.10.

	* HISTORY, META, NEWS, PLATFORMS, munge.spec:
	  Updated for 0.5.10 release.

	* src/libcommon/fd.c (fd_timed_write_iov):
	  Fixed "assignment type mismatch" compiler warning on Solaris when
	  assigning an unsigned value to the signed struct iovec iov_base ptr.
	* src/libcommon/m_msg.c (m_msg_send): 
	  Fixed "assignment type mismatch" compiler warning on Solaris when
	  assigning an unsigned value to the signed struct iovec iov_base ptr.

2011-02-24  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/fd.h: Added <sys/time.h> include for struct timeval
	  on AIX.

	* src/munged/xgetgrent.c (_xgetgrent_get_buf_size):
	  Replaced DEFAULT_GR_BUF_SIZE with MINIMUM_GR_BUF_SIZE.
	* src/munged/xgetpwnam.c (_xgetpwnam_get_buf_size):
	  Replaced DEFAULT_PW_BUF_SIZE with MINIMUM_PW_BUF_SIZE.

2011-02-16  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/m_msg.c (_get_timeval): Added check for gettimeofday()
	  error.

	* src/munge/remunge.c (process_creds): Fixed "overflow in implicit
	  constant conversion" warning for to.tv_sec (time_t) on OpenBSD 4.7
	  where a time_t is 4 bytes and LONG_MAX is 8 bytes.

	* src/libmunge/munge_ctx.3.in: Twiddled wording for MUNGE_ZIP_BZLIB.

2011-02-15  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/auth_recv.c: Added <sys/socket.h> include for getpeereid()
	  on OpenBSD.
